@@ -1,6 +1,6 @@
 /*  JPEG class wrapper to ijg jpeg library
 
-    Copyright (C) 2000-2020 Ruven Pillay.
+    Copyright (C) 2000-2022 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -19,9 +19,10 @@
 
 
 #include <cmath>
+#include <cstdio>
 
 #include "JPEGCompressor.h"
-#include <iostream>
+
 
 using namespace std;
 
