@@ -1,3 +1,7 @@
+22/05/2022:
+	- Removed unnecessary <iostream> includes
+
+
 20/05/2022:
 	- Added WebP output support. Both tile and region output are supported for both IIP and IIIF. Individual tiles can
 	  be requested using the WTL paramter which works in the same way as PTL for PNG and JTL for JPEG. CVT region
